--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "version": 2,
   "builds": [
     { "src": "api/*.ts", "use": "@vercel/node" },
-    { "src": "vite.config.ts", "use": "@vercel/static-build", "config": { "distDir": "dist", "buildCommand": "npm run build" } }
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist", "buildCommand": "npm run build" }
+    }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "/api/$1" },
