--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:api": "vercel dev --listen 3000",
     "build": "vite build",
     "preview": "vite preview",
     "lint": "tsc --noEmit",
