--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@prisma/client": "5.9.1",
+    "@radix-ui/react-icons": "1.3.0",
+    "@radix-ui/themes": "2.0.1",
     "googleapis": "131.0.0",
     "pg": "8.11.3",
     "react": "18.2.0",
